themes/openstack/scss/home-page.scss
/* ... */
.intro-header h1 {
  color: #00497B !important; }

.intro-message {
  position: relative;
  /*padding-top: 0;*/
  /*padding-bottom: 110px; */
  padding-top: 15px;
  padding-bottom: 0;
  color: #00497B;
}

@media (max-width: 1199px) {
  .intro-message {
    /*padding-bottom: 30px; */
    padding-bottom: 0;
  }
}

.intro-message > h1 {
  margin: 0;
  font-size: 3em;
  font-weight: bold;
  text-align: left;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  width: 100%;
  letter-spacing: -0.663px;
  line-height: 57px;
}

.intro-divider {
  width: 400px;
  border-top: 1px solid #f8f8f8;
  border-bottom: 1px solid rgba(0, 0, 0, 0.2); }

.intro-message > h3 {
  text-shadow: none;
  text-align: left;
  font-weight: 300;
  font-size: 24px;
  margin-top: 10px; }

.hero-credit {
  position: absolute;
  bottom: 30px;
  right: 30px;
  color: #fff;
  opacity: 0.5; }

.hero-credit:hover {
  opacity: 1; }

.hero-credit a, .hero-credit a:hover {
  color: #fff; }

/*Hero Promo, add .featured to .intro-header*/
.intro-header.featured {
  text-align: left;
  background: no-repeat scroll center center / cover rgba(0, 0, 0, 0);
  min-height: 300px;
  background-size: cover;
  position: relative;
  padding: 50px 0 30px 0;
}

.intro-header.featured .intro-message {
  padding-bottom: 5px; }

.intro-header.featured p {
  font-size: 16px;
  line-height: 22px;
}

.intro-header.featured img {
  margin-top: -20px;
  margin-right: -120px;
}

.intro-header-link {
  font-weight: bold;
  color: #888888;
}

a.promo-btn {
  /*color: #fff;
  font-size: 16px;
  font-weight: 300;
  background: transparent;
  border: 2px solid #fff;
  border-radius: 4px;
  padding: 2px 30px;
  margin: 0 auto;
  text-align: center;
  max-width: 300px;
  display: inline-block;
  line-height: 2;
  border-radius: 4px;*/
  white-space: nowrap;
  color: white;
  font-size: 16px;
  font-weight: 400;
  background: #ed1944;
  padding: 7px 30px;
  margin: 0 auto;
  text-align: center;
  text-transform: uppercase;
  min-width: 250px;
  display: inline-block;
  line-height: 2;
}

a.promo-btn:hover, a.promo-btn:focus  {
  text-decoration: none;
  /*background: rgba(255, 255, 255, 0.2);*/
  background: #A51B1B;
}

.promo-btn-wrapper {
  margin-top: 28px;
  margin-bottom: 28px;
}
a.promo-btn i.fa-chevron-right {
  background: transparent;
  border-radius: 50%;
  padding: 0;
  font-size: 13px;
  margin-left: 20px;
  line-height: 1em;
}

p.promo-dates {
  /*display: inline-block;
  margin-top: 10px;
  font-weight: 400; */
  display: inline-block;
  margin-top: 10px;
  font-weight: 400;
  margin-bottom: 30px;
  letter-spacing: -.4px;
}

@media (max-width: 900px) {

  .intro-header.featured {
    [class*="col-"] {
      padding-left: 15px !important;
      padding-right: 15px !important;
    }

    a.anniversary-btn {
      margin-left:-30px;
    }

    .diagram-section img {
      width: 100%;
      padding-bottom: 30px;
    }
  }

  .intro-header.featured img {
    margin: 0 auto;
    width: 80%;
    display: block;
  }

  a.promo-btn {
    padding: 7px 10px;
  }
  .promo-btn-wrapper{
    text-align: center;
  }
}

/*End Hero*/


/*News Anniversary*/

.news-anniversary {
  width: 90%;
  background-color: #00497B;
  border-radius: 10px;
  min-height: 200px;
  display: flex;
  display: -ms-flexbox;
  display: -webkit-flex;
  align-items: center;
  justify-content: space-evenly;
  border-left: 50px solid #ffd602;
  filter: drop-shadow(2px 2px 1px #000); 
  margin: auto;
}

.news-anniversary h3 {
  font-size: 1.2em;
  color: #00497b;
  text-transform: uppercase;
  letter-spacing: 3px;
  position: absolute;
  left: 0;
  margin-left: -70px;
  transform: rotate(270deg); 
  }

.news-anniversary img {
  margin-bottom: 30px;
  width: 600px; }

.anniversary-robot {
  width: 30%;
  padding: 19px 0; 
  }

.anniversary-text {
  width: 100%;
  padding: 50px;
  color: #FFFFFF;
  padding-left: 80px;
  padding-right: 90px;
  text-align: left; 
  }

.anniversary-text p {
  font-size: 16px;
  color: #fff; 
  }

a.anniversary-btn {
  white-space: nowrap;
  color: white;
  font-size: 16px;
  font-weight: 400;
  background: transparent;
  border: 2px solid #fff;
  padding: 7px 30px;
  margin: 0 auto;
  text-align: center;
  text-transform: uppercase;
  min-width: 190px;
  display: inline-block;
  line-height: 22px; 
  }

a.anniversary-btn:hover, a.anniversary-btn:focus {
  text-decoration: none;
  background: #fff;
  color: #00497B; 
  }

.anniversary-btn-wrapper {
  width: 50%;
  text-align: center; 
  }

.anniversary-btn-wrapper p {
  font-size: 18px;
  color: #fff;
  text-align: center; 
  }

@media (max-width: 1200px) {
  
  .anniversary-text {
    padding-right: 20px;
   }

  .anniversary-btn-wrapper {
    width: 50%; 
  }
}

@media (max-width: 1100px) {
  .news-anniversary {
      flex-direction: column; 
    }
  .anniversary-text {
    padding-bottom: 20px;
    text-align:center;
    padding-left:20px;
   }
  .anniversary-btn-wrapper {
    padding-bottom:40px; 
  }
}
    

@media (max-width: 767px) {

    .news-anniversary {
      flex-direction: column; 
      text-align:center;
    }
  
    .news-anniversary .anniversary-robot {
      width: 100%;
      padding: 19px 0 0; 
      }
  
    .news-anniversary .anniversary-text {
      width: 100%;
      padding: 20px; 
      text-align:center;
      padding: 0 10px;
    }
    .anniversary-text p {
      font-size:16px;
      line-height: 2.2em;
      padding: 0 20px;
    }
    .news-anniversary .anniversary-btn-wrapper {
      width: 100%;
      text-align: center;
      margin: 19px 0 29px; 
      padding-bottom: 10px;
    }
      .news-anniversary img {
        margin-bottom: 10px;
        width: 400px; 
        padding-top: 40px;
    }
}
/* ... */

